fixed photo on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -513,7 +513,7 @@ header .logo {
 }
 
 header .logo img {
-    height: 19px;
+    height: 38px;
 }
 
 header ul.primary-nav {
